feat: add FirstComponent to Demo0-v19

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,45 @@
-<h1>Hello,Github!,20260122,Thursday,PM0527</h1>
-<h1>Hello,Github!,20260122,Thursday,PM0532</h1>
 
+<app-first></app-first>
+
+
+
+<!-- <ol>
+  <li><input type="file"/>File</li>
+  <li><input type="radio"/>Radio  </li>
+  <li><button>按鈕(button)</button></li>
+</ol>
+<input type="checkbox" name="" id="" /> 我同意此網站的使用條款
+<button type="submit">提交</button>
+<div>
+<img src="/icon.png" alt="My logo" width="100" height="130">
+</div>div=區塊 1:√3:2 -->
+<!-- <a href="https://epass.boca.gov.tw/Default.html" target="_blank">Todo:前往外交部領事館</a> -->
+<!-- <a href="https://www.w3schools.com/html/html_links.asp" target="_blank">HTML Links</a> -->
+<!-- <a href="https://onlinealarmkur.com/date/zh-tw/#add-date" target="_blank">線上倒數計時器</a> -->
+<!-- <label for=""></label><input type="password" -->
+<!-- <label for="">姓名:</label> -->
+<!-- <input type="password" name="" id="">  input type="資料型別"  -->
+<!-- <input type="password" name="" id="">  input type="資料型別"  -->
+<!-- 背景可以放:1.絕對路徑,2.網址,3.本地端圖片 -->
+<!-- 圖片：著作權問題，商業合作 -->
+<!-- CSS選擇器雙引號在外網址內要使用單引號 -->
+
+
+
+<!-- [CSS] -->
+<!-- <div style="width: 10vw; height: 15vh; -->
+     <!-- background-color: green;"> -->
+
+<!-- 我現在要設計一個定錨在左上角不變,圖像是速成的ＬＯＧＯ，點擊一下回首頁 -->
+<!-- <div style=
+    "position:fixed; width:30px; height: 30px; background-color: whitesmoke;
+     left:10px; top:10px; border-radius: 60px; text-align: center; padding-top:5px;"
+>
+</div> -->
+
+
+
+<!-- [Github Practice] -->
+<!-- <h1>Hello,Github!,20260122,Thursday,PM0527</h1>
+<h2>Hello,Github!,20260122,Thursday,PM0532</h2>
+<h3>Hello,Github!,20260123,Friday,AM1134</h3> -->
